--- a/P/0/0.html
+++ b/P/0/0.html
@@ -959,16 +959,16 @@ head(data_tidy)
 
 | Marta Coronado Zamora | Jose F. Sánchez | 
 |:-:|:-:|
-| &lt;a href="mailto:Marta.coronado@upc.edu"&gt;&lt;i class="fa fa-paper-plane fa-fw"&gt;&lt;/i&gt; Marta.coronado@upc.edu&lt;/a&gt; | &lt;a href="mailto:JoseFrancisco.Sanchez@uab.cat"&gt;&lt;i class="fa fa-paper-plane fa-fw"&gt;&lt;/i&gt;&amp;nbsp; JoseFrancisco.Sanchez@uab.cat&lt;/a&gt; | 
-| &lt;a href="https://twitter.com/geneticament"&gt;&lt;i class="fab fa-twitter fa-fw"&gt;&lt;/i&gt;&amp;nbsp; @geneticament&lt;/a&gt; |                 &lt;a href="https://twitter.com/JFSanchezBioinf"&gt;&lt;i class="fab fa-twitter fa-fw"&gt;&lt;/i&gt;&amp;nbsp; @JFSanchezBioinf&lt;/a&gt; |
-| &lt;a href="https://www.ibb.csic.es/ca/"&gt;&lt;i class="fa fa-map-marker fa-fw"&gt;&lt;/i&gt;&amp;nbsp; Institut Botànic de Barcelona (CSIC-CMCNB)&lt;/a&gt; |    &lt;a href="http://www.germanstrias.org/technology-services/genomica-bioinformatica/"&gt; &lt;i class="fa fa-map-marker fa-fw"&gt;&lt;/i&gt;Germans Trias i Pujol Research Institute (IGTP)&lt;/a&gt; |
+| &lt;a href="mailto:Marta.coronado@uab.cat"&gt;&lt;i class="fa fa-paper-plane fa-fw"&gt;&lt;/i&gt; marta.coronado@uab.cat&lt;/a&gt; | &lt;a href="mailto:JoseFrancisco.Sanchez@uab.cat"&gt;&lt;i class="fa fa-paper-plane fa-fw"&gt;&lt;/i&gt;&amp;nbsp; josefrancisco.sanchez@uab.cat&lt;/a&gt; | 
+| &lt;a href="https://bsky.app/profile/geneticament.bsky.social"&gt;&lt;i class="fab fa-bluesky fa-fw"&gt;&lt;/i&gt;&amp;nbsp; @geneticament&lt;/a&gt; |                 &lt;a href="https://twitter.com/JFSanchezBioinf"&gt;&lt;i class="fab fa-twitter fa-fw"&gt;&lt;/i&gt;&amp;nbsp; @JFSanchezBioinf&lt;/a&gt; |
+| &lt;a href="https://portalrecerca.uab.cat/es/organisations/grup-de-gen%C3%B2mica-bioinform%C3%A0tica-i-biologia-evolutiva-gbbe/"&gt;&lt;i class="fa fa-map-marker fa-fw"&gt;&lt;/i&gt;&amp;nbsp; Universitat Autònoma de Barcelona &lt;/a&gt; |    &lt;a href="http://www.germanstrias.org/technology-services/genomica-bioinformatica/"&gt; &lt;i class="fa fa-map-marker fa-fw"&gt;&lt;/i&gt;Germans Trias i Pujol Research Institute (IGTP)&lt;/a&gt; |
 
 #### Practical lessons &lt;br&gt;
 
 | Miriam Merenciano |
 |:-:|
-| &lt;a href="mailto:miriam.merenciano@univ-lyon1.fr"&gt;&lt;i class="fa fa-paper-plane fa-fw"&gt;&lt;/i&gt; miriam.merenciano@univ-lyon1.fr &lt;/a&gt; | 
-|  &lt;a href="https://www.univ-lyon1.fr/en/research/biometry-and-evolutionary-biology-laboratory-lbbe"&gt;&lt;i class="fa fa-map-marker fa-fw"&gt;&lt;/i&gt;&amp;nbsp; Laboratory of Biometry and Evolutionary Biology (LBBE)) &lt;/a&gt; | 
+| &lt;a href="mailto:miriam.merenciano@uab.cat"&gt;&lt;i class="fa fa-paper-plane fa-fw"&gt;&lt;/i&gt; miriam.merenciano@uab.cat &lt;/a&gt; | 
+|  &lt;a href="https://portalrecerca.uab.cat/es/organisations/grup-de-gen%C3%B2mica-bioinform%C3%A0tica-i-biologia-evolutiva-gbbe/"&gt;&lt;i class="fa fa-map-marker fa-fw"&gt;&lt;/i&gt;&amp;nbsp; Universitat Autònoma de Barcelona &lt;/a&gt; | 
 
 
 
