--- a/P/0/0.html
+++ b/P/0/0.html
@@ -168,7 +168,7 @@ class: animated, fadeIn
 
 - __1\.__ Create groups of 3-4 people
 
-Make groups of 3-4students to work on the home assignments projects.
+Make groups of 3-4 students to work on the home assignments projects.
 
 - __2\.__ Enroll in ATENeA
 
@@ -182,9 +182,19 @@ class: animated, fadeIn
 Basic knowledge in R and familiarity with RStudio are prerequisites.
 
 --
-&lt;center&gt;
-&lt;img src="img/kahoot.jpg" width=500/&gt;
+
+.pull-left[&lt;center&gt;
+&lt;img src="img/descarga.png" width=500/&gt;
 &lt;/center&gt;
+]
+
+.pull-right[
+1. Go to https://wooclap.com
+
+2. Introduce the event code: **BJMEAL**
+
+3. Login (SSO) with ATENeA
+]
 
 ---
 layout: false
@@ -219,7 +229,7 @@ class: animated, fadeIn
 
 - Interactive code-based `R`
 
-&lt;font color="#A8A8A8"&gt;Rstudio (Jupyter Notebook, and other computer languages)&lt;/font&gt;
+  &lt;font color="#A8A8A8"&gt;RStudio (Jupyter Notebook, and other computer languages)&lt;/font&gt;
 
 --
 
@@ -706,6 +716,7 @@ class: animated, fadeIn
 - `?read.table`, `?str`, `?as.factor`
 - Press F1 (in RStudio)
 - [Stack Overflow](https://stackoverflow.com) ([`R`](https://stackoverflow.com/questions/tagged/r), [`ggplot2`](https://stackoverflow.com/questions/tagged/ggplot2))
+- ChatGPT
 - Ask your classmates or your teacher
 
 ---
