--- a/T/0/0.html
+++ b/T/0/0.html
@@ -125,7 +125,7 @@ The graphic is notable for its representation in two dimensions of six types of 
 Bar char by the German economic development agency GTAI. &lt;a src="https://www.gtai.de/GTAI/Navigation/EN/invest,t=motivated-and-dependable-employees,did=214428.html"&gt;German labor market&lt;/a&gt;.
 
 
-&lt;img src="0_files/figure-html/unnamed-chunk-1-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="0_files/figure-html/unnamed-chunk-1-1.png" width="2100" style="display: block; margin: auto;" /&gt;
 
 
 
@@ -134,7 +134,7 @@ Bar char by the German economic development agency GTAI. &lt;a src="https://www.
 ## &lt;i&gt;“Above all, show the data”:  Fair axis limits&lt;/i&gt; 
 
 
-&lt;img src="0_files/figure-html/unnamed-chunk-2-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="0_files/figure-html/unnamed-chunk-2-1.png" width="3900" style="display: block; margin: auto;" /&gt;
 
 
 **The size of this gap is an illusion.**
@@ -170,13 +170,13 @@ class: animated, fadeIn
 
 ## &lt;i&gt;“Above all, show the data”:  Fair axis limits&lt;/i&gt; 
 
-![](0_files/figure-html/unnamed-chunk-3-1.png)&lt;!-- --&gt;
+&lt;img src="0_files/figure-html/unnamed-chunk-3-1.png" width="2100" /&gt;
 
 ---
 
 ## &lt;i&gt;“Above all, show the data”:  Fair axis limits&lt;/i&gt; 
 
-![](0_files/figure-html/unnamed-chunk-4-1.png)&lt;!-- --&gt;
+&lt;img src="0_files/figure-html/unnamed-chunk-4-1.png" width="4200" /&gt;
 
 When we talk about global temperature, a change of 1–2 °C is very significant.&lt;br&gt;
 &lt;small&gt;&lt;a href="https://doi.org/10.1126/science.abn7950"&gt;Armstrong McKay, David I. (2022). "Exceeding 1.5°C global warming could trigger multiple climate tipping points". Science. 377 (6611): eabn7950&lt;/a&gt;.&lt;/small&gt;
@@ -186,7 +186,7 @@ class: animated, fadeIn
 
 ### &lt;i&gt;“Above all, show the data”: double-axis
 
-![](0_files/figure-html/unnamed-chunk-5-1.png)&lt;!-- --&gt;
+&lt;img src="0_files/figure-html/unnamed-chunk-5-1.png" width="2100" /&gt;
 
 Is the GDP of the US equal to the global GDP?
 
@@ -195,7 +195,7 @@ class: animated, fadeIn
 
 ### &lt;i&gt;“Above all, show the data”: double-axis
 
-![](0_files/figure-html/unnamed-chunk-6-1.png)&lt;!-- --&gt;
+&lt;img src="0_files/figure-html/unnamed-chunk-6-1.png" width="4200" /&gt;
 
 Data with the same units of measurement are better displayed using **the same scale** on a single axis.
 
@@ -552,7 +552,7 @@ Chart that encodes information using hue - &lt;small&gt;Dataset of 32 cars that 
 ##### Credit: John Rauser
 .pull-left[
 &lt;center&gt;
-&lt;img src="img/Diapositiva12020_9_22D12_51_57.PNG"&gt;
+&lt;img src="img/Diapositiva12020_9_22D12_51_57.png"&gt;
 &lt;/center&gt;
 Chart that encodes information using hue - &lt;small&gt;Dataset of 32 cars that were tested in a 1974 issue of Motor Trend magazine. Fuel efficiency in miles per gallon or mpg&lt;/small&gt;.   
 
@@ -571,7 +571,7 @@ The first Cleveland's estimation task is **discrimination**:
 
 .pull-left[
 &lt;center&gt;
-&lt;img src="img/Diapositiva22020_9_22D12_52_22.PNG"&gt;
+&lt;img src="img/Diapositiva22020_9_22D12_52_22.png"&gt;
 &lt;/center&gt;
 Chart that encodes information using hue - &lt;small&gt;Dataset of 32 cars that were tested in a 1974 issue of Motor Trend magazine. Fuel efficiency in miles per gallon or mpg&lt;/small&gt;.   
 
@@ -590,7 +590,7 @@ The first Cleveland's estimation task is **discrimination**:
 
 .pull-left[
 &lt;center&gt;
-&lt;img src="img/Diapositiva32020_9_22D12_52_47.PNG"&gt;
+&lt;img src="img/Diapositiva32020_9_22D12_52_47.png"&gt;
 &lt;/center&gt;
 Chart that encodes information using hue - &lt;small&gt;Dataset of 32 cars that were tested in a 1974 issue of Motor Trend magazine. Fuel efficiency in miles per gallon or mpg&lt;/small&gt;.    
 
